# objectbox-generator

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  c-api-example.md  go.mod  go.sum
.github/workflows/: ci.yml
ci/docker/: Dockerfile.ubuntu
cmake/: CMakeLists.txt  FindObjectBoxGenerator.cmake  obxGenerator.cmake
cmd/: generatorcmd.go
cmd/objectbox-cgen/: doc.go  objectbox-cgen.go  objectbox-gogen.go
cmd/objectbox-generator/: doc.go  objectbox-cgen.go  objectbox-generator.go
cmd/objectbox-gogen/: gogen.go
examples/cmake/: CMakeLists.txt
examples/cpp/: .gitignore  CMakeLists.txt
examples/cpp-flat-layout/: CMakeLists.txt  main.cpp
examples/cpp/src/: main.cpp
internal/generator/: generator.go  merge.go  options.go
internal/generator/binding/: annotation.go  backlink.go  field.go  object.go
internal/generator/c/: cgenerator.go  maps.go  meta.go  reserved.go  schema-reader.go
internal/generator/c/templates/: binding-c.go  binding-cpp.go  binding-hpp.go  binding.go  c-binding.go  cpp-binding.go  functions.go  model.go
internal/generator/fbsparser/: README.md  fbsc.go  fbsc_test.go  flatbuffersc.h
internal/generator/fbsparser/reflection/: Enum.go  EnumVal.go  RPCCall.go  Service.go
internal/generator/flatbuffersc/: c-arrays.go  dummy.cpp  fbsc.go  fbsc_test.go  flatbuffersc.h
internal/generator/flatbuffersc/reflection/: AdvancedFeatures.go  BaseType.go  Enum.go  EnumVal.go  Field.go  KeyValue.go  Object.go  RPCCall.go  Schema.go  SchemaFile.go  Service.go  Type.go
internal/generator/go/: ast-reader.go  ast.go  binding.go  fields.go  gogenerator.go
internal/generator/go/templates/: binding.go  functions.go  model.go
internal/generator/model/: constants.go  entity.go  fileio.go  iduid.go  meta.go  model.go  property.go  relation.go  relcycles.go
internal/generator/modelinfo/: constants.go  entity.go  iduid.go  property.go  relation.go
scripts/: docker-build.py  update-flatbuffersc-reflection.sh
test/: basics_test.go
test/assert/: assert.go
test/cmake/: cmake.go  libcheck.go  libcheck_test.go
test/comparison/: .gitignore  README.md  c-helper.go  conf.go  file-io.go  generator_test.go  go-helper.go  test-all.go  util.go
test/comparison/c/typeful/: objectbox-model.h.expected  objectbox-model.json.expected
test/comparison/fbs/typeful/: objectbox-model.json.expected
test/comparison/fbs/typeful/c/: objectbox-model.h.expected
test/comparison/fbs/typeful/cpp/: schema-cpp.obx.h.expected
test/comparison/go/embedding/: E.obx.go.expected
test/comparison/go/relations/: 1group.obx.go.expected
test/comparison/testdata/embedding/: E.go  E.obx.go.expected
test/comparison/testdata/fbs/property-update/: ChangeUid.fbs  EmptyUid.fail.fbs  objectbox-model.json.expected
test/comparison/testdata/fbs/rename-property/: B.fbs  C.fail.fbs  D.fail.fbs  objectbox-model.json.expected  objectbox-model.json.initial
test/comparison/testdata/fbs/typeful/: objectbox-model.json.expected  other.fbs  schema.fbs
test/comparison/testdata/go/converters/: objectbox-model.go.expected  runeid.obx.go.expected  stringid.obx.go.expected  time.obx.go.expected
test/comparison/testdata/go/cycles/: embedding-named.fail.go  embedding.fail.go
test/comparison/testdata/go/embedding/: 1.fail.go  2.fail.go  A.obx.go.expected  B.obx.go.expected  C.obx.go.expected  D.obx.go.expected  E.go  E.obx.go.expected  F.obx.go.expected  objectbox-model.go.expected  objectbox-model.json.expected
test/comparison/testdata/go/id/: A.obx.go.expected  B.obx.go.expected  C.obx.go.expected  D.obx.go.expected  String.obx.go.expected  duplicate.fail.go  multiple.fail.go  none.fail.go  objectbox-model.go.expected  type-int.fail.go
test/comparison/testdata/go/intra-package-dependency/: A.obx.go.expected  (+1 more)
test/comparison/testdata/rename-property/: compile-error.expected
test/comparison/testdata/rename-relation/: compile-error.expected
test/comparison/testdata/typeful/: aliases.go  aliases.obx.go.expected
test/compilers/: c-compiler.go
test/generator/: file-io.go  generator_test.go  test-all.go
test/generator/testdata/c/: objectbox-model.json.expected  other.fbs  schema.fbs
test/generator/testdata/embedding/: E.go  E.obx.go.expected
test/generator/testdata/id/: String.obx.go.expected
test/generator/testdata/property-update/: compile-error.expected
test/generator/testdata/typeful/: aliases.go  aliases.obx.go.expected
test/integration/: .clang-format  .gitignore  integration.go
test/integration/cmake/: cmake_test.go
test/integration/cmake/projects/: common.cmake
test/integration/cmake/projects/cpp-flat/: CMakeLists.txt  main.cpp
test/integration/cmake/update-cpp-flat/: CMakeLists.txt  main.cpp  task.fbs
test/integration/include-paths/: integration_test.go
test/integration/include-paths/cpp/: main.cpp
test/integration/include-paths/schema/: schema.fbs
test/integration/optional/: integration_test.go  rel.fbs  std-optional.fbs
test/integration/optional/cpp/: main.cpp
test/integration/property-clear/: property_clear_test.go
test/integration/property-clear/cpp/: shared.h  step-1.cpp  step-2.cpp
test/integration/removes/: remove_test.go
test/integration/removes/cpp/: step-1.cpp  step-2.cpp
test/integration/renames/: rename_test.go
test/integration/renames/cpp/: shared.h  step-1.cpp  step-2.cpp
test/integration/shared/: store-init.h
test/integration/sync/: integration_test.go  synced.fbs
test/integration/sync/cpp/: main.cpp
test/integration/typeful/: annotated.fbs  integration_test.go  schema.fbs
test/integration/typeful/cpp/: main.cpp
test/standalone-cmake/: common.cmake  test-cmake-generators.cmake
test/standalone-cmake/cpp-flat/: CMakeLists.txt
test/standalone-cmake/cpp-multiple-schema-dirs/: CMakeLists.txt
test/standalone-cmake/cpp-multiple-schema-dirs/src/: main.cpp
test/standalone-cmake/cpp-multiple-targets/: CMakeLists.txt  main.cpp  monster.fbs
test/standalone-cmake/cpp-tree/: CMakeLists.txt
test/standalone-cmake/cpp-tree-multiple-targets/: CMakeLists.txt
test/standalone-cmake/cpp-tree/src/: main.cpp
(+104 files in other folders)
